# apllos-generativeai-challenge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CUSTOM_IMPLEMENTATIONS_ANALYSIS.md  Dockerfile  INTEGRATION_MAP.md  LICENSE  Makefile  README.md  chainlit.toml  docker-compose.yml  langgraph.json  pyproject.toml  test_config_migration_results.md
app/: __init__.py
app/agents/: __init__.py
app/api/: __init__.py  server.py
app/config/: __init__.py  agents.yaml  config.yaml  database.yaml  loader.py  models.yaml  observability.yaml  settings.py
app/contracts/: __init__.py  answer.py  router_decision.py
app/graph/: __init__.py  assistant.py  build.py  interrupts.py
app/infra/: __init__.py  cache.py  checkpointer.py  db.py  llm_client.py  logging.py  metrics.py  tracing.py
app/prompts/: __init__.py
app/routing/: __init__.py  allowlist.json  allowlist_snapshot.py  llm_classifier.py  supervisor.py
app/utils/: __init__.py  anaphora.py  conversation_search.py  ids.py  semantic_analysis.py  time.py  typing_ext.py  validation.py
data/samples/: order_example.txt  schema.sql  seed.sql
docs/: README.md  api.md  architecture.md  configuration.md  contracts_utils.md  design-decisions.md  glossary.md  infra.md  native-improvements.md  operations.md  prompts_data_scripts.md  routing.md  testing.md
docs/agents/: agents_overview.md  analytics.md  commerce.md  knowledge.md  triage.md
docs/core/: api.md  architecture.md  data_architecture.md  design-decisions.md  frontend.md  infra.md  observability.md  router_vs_supervisor.md  routing.md  security_guardrails.md
docs/development/: configuration.md  contracts_utils.md  prompts_data_scripts.md  testing.md
docs/operations/: operations.md  troubleshooting.md
docs/reference/: examples.md  faq.md  glossary.md
frontend/: .chainlitignore  __init__.py  chainlit_app.py  client.py  config.py  pdf_exporter.py  utils.py
scripts/: batch_query.py  eval_routing.py  explain_sql.py  gen_allowlist.py  ingest_analytics.py  ingest_vectors.py  query_assistant.py
tests/: batch_queries_complete.md  batch_queries_complete.yaml  conftest.py  test_queries.md
tests/batch/: analytics_questions.txt  knowledge_questions.txt  test_analytics.md  test_analytics.yaml  test_commerce.md  test_commerce.yaml  test_config_migration.yaml  test_knowledge.md  test_knowledge.yaml
tests/e2e/: test_full_end_to_end.py  test_human_gates.py  (+2 more)
(+57 files in other folders)
