[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "apllos-generativeai-challenge"
version = "0.1.0"
description = "LangGraph-based assistant (analytics, knowledge, commerce, triage)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Apllos Team" }]

# Core runtime + platform + infra
dependencies = [
  # LangGraph ecosystem (server + studio integration & tracing helpers)
  "langgraph>=0.6.0",
  "langgraph-sdk>=0.1.66",
  "langgraph-checkpoint>=2.0.23",
  "langchain-core>=0.2.38",
  "langsmith>=0.1.63",

  # LLMs & IO
  "openai>=1.40.0",
  "httpx>=0.25.0",
  "tenacity>=8.0.0",
  "orjson>=3.9.7,<3.10.17",
  "jsonschema-rs>=0.20.0",
  "cloudpickle>=3.0.0",

  # App infra & logging
  "structlog>=24.1.0",
  "PyYAML>=6.0",
  "python-dotenv>=1.0.0",

  # Database (Postgres + pgvector)
  "SQLAlchemy>=2.0.30",
  "psycopg[binary,pool]>=3.1.18",
  "psycopg2-binary>=2.9.0",
  "pgvector>=0.3.4",

  # API server/runtime niceties
  "sse-starlette>=2.1.0,<2.2.0",
  "uvicorn>=0.26.0",
  "uvloop>=0.18.0; platform_system != 'Windows'",
  "httptools>=0.5.0; platform_system != 'Windows'",
  
  # Document processing
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111.0",
]
dev = [
  "ruff>=0.4.0",
  "black>=24.4.2",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "types-PyYAML>=6.0.12",
  "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
# Package the main application package only; scripts are invoked directly.
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
lint.select = ["E", "F", "W", "I", "UP", "B", "C4", "T20"]
lint.ignore = ["E203", "E501"]  # E501 handled by Black; E203 for Black compatibility
exclude = ["data/**"]

[tool.black]
target-version = ["py311"]
line-length = 100
preview = true

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_any_generics = true
strict_equality = true
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
xfail_strict = true
filterwarnings = [
  "ignore::DeprecationWarning:httpx.*",
  "ignore::DeprecationWarning:sqlalchemy.*",
]
